@@ -12,6 +12,7 @@ version 5.1:
 - feedback video filter
 - pixelize video filter
 - colormap video filter
+- colorchart video source filter
 
 
 version 5.0:
